force-app/main/default/src/objects/Loop__Related_Object__c/fields/Loop__DDP__c.field-meta.xml
<CustomField>
    <fullName>Loop__DDP__c</fullName>
    <label>DocGen Package</label>
    <referenceTo>Loop__DDP__c</referenceTo>
    <relationshipName>Related_Objects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>