force-app/main/default/src/objects/Loop__Related_Object__c/fields/Loop__Filter_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Loop__Filter_Conditions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Filter Conditions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>