force-app/main/default/src/objects/Loop__Related_Object__c/fields/Loop__Group_By_SortOrders__c.field-meta.xml
<CustomField>
    <fullName>Loop__Group_By_SortOrders__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group By Sort Orders</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>