force-app/main/default/src/objects/Loop__Related_Object__c/fields/Loop__Hierarchy_Field__c.field-meta.xml
<CustomField>
    <fullName>Loop__Hierarchy_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hierarchy Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>