force-app/main/default/src/objects/Loop__Related_Object__c/fields/Loop__Order_By__c.field-meta.xml
<CustomField>
    <fullName>Loop__Order_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field specifies the order of the related objects.</inlineHelpText>
    <label>Order By</label>
    <type>TextArea</type>
</CustomField>