force-app/main/default/src/objects/Loop__Related_Object__c/fields/Loop__Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Loop__Parent_Object__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the API Name of the standard or custom object that is the parent of this related object.</inlineHelpText>
    <label>Parent Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>