force-app/main/default/src/objects/Loop__Related_Object__c/fields/Loop__Parent_Object_Field__c.field-meta.xml
<CustomField>
    <fullName>Loop__Parent_Object_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is used to identify the correct Child-Parent relationship. If there are multiple lookup / master-detail fields that can determine this Child-Parent relationship, select the appropriate one for the necessary data.</inlineHelpText>
    <label>Related By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>