force-app/main/default/src/objects/Loop__Related_Object__c/fields/Loop__SOQL__c.field-meta.xml
<CustomField>
    <fullName>Loop__SOQL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SOQL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>